# raytracing-in-rust

./: Cargo.toml  README.md
assets/: blackout.yaml  config.yaml  extreme-reflection.yaml
src/: camera.rs  color.rs  main.rs  ray.rs  scene.rs  serialize.rs  texture.rs  world.rs
src/light/: directional.rs  mod.rs  point.rs
src/model/: mod.rs  plane.rs  sphere.rs
