[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

publish = false

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
pixels = "0.13.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
ultraviolet = { version = "0.9.2", features = ["serde"] }
winit = "0.28"
winit_input_helper = "0.14"
